Fixed animation clipping on big monitors for .area

--- a/root/styles/styles.css
+++ b/root/styles/styles.css
@@ -54,6 +54,15 @@ a {
   margin: 0 auto 10vh auto;
 }
 
+.s1 {
+  margin-bottom: 20vh;
+}
+
+.s2 {
+  display: block;
+  padding-top: 10vh;
+}
+
 .s7 {
   padding: 0;
 }
